# eks-ml-observability-poc

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml
.claude/commands/: branch.md  pr.md
.claude/skills/branch/: SKILL.md
.claude/skills/pr/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
db/: init.sql
docs/: PLAN.md  PRD.md  REPORT.md  TASKS.md  TechStack.md  user-guide.md
inference-api/: Dockerfile  pyproject.toml
inference-api/app/: database.py  detector.py  main.py  metrics.py  schemas.py
inference-api/app/routers/: events.py
inference-api/tests/: test_detector.py  test_domain_metrics.py  test_events_api.py  test_main.py  test_predict.py  test_schemas.py
k8s/base/inference-api/: deployment.yaml  hpa.yaml  service.yaml
k8s/base/postgresql/: configmap-init.yaml  deployment.yaml  pvc.yaml
k8s/base/sensor-generator/: deployment.yaml
k8s/helm-values/: kube-prometheus-stack.yaml
observability/alertmanager/: alertmanager.yml
observability/prometheus/: alerting_rules.yml  prometheus.yml
scripts/: run_scenario.sh  setup_ecr.sh  test_compose_structure.py  test_db_schema.py  test_grafana_config.py  test_k8s_manifests.py  test_observability_config.py  test_scenario_scripts.py  verify_structure.sh
sensor-generator/: Dockerfile  pyproject.toml
sensor-generator/profiles/: error.yaml  load.yaml  normal.yaml  quality_degradation.yaml
sensor-generator/sensor_generator/: __main__.py  client.py  generator.py
sensor-generator/tests/: test_client.py  test_generator.py  test_profile.py
(+2 files in other folders)
